# t2s

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTEXT.md  LICENSE  README.md  Untitled.ipynb  check_eod.sh  start.sh  start_bg.sh  stop.sh  test.q
config/: quote_feed_handler.json  trade_feed_handler_fut.json
cpp/include/: config.hpp  json_reader.hpp  k_object.hpp  logger.hpp  market_config.hpp  order_book_manager.hpp  quote_feed_handler.hpp  rest_client.hpp  snapshot_worker.hpp  socket_utils.hpp  trade_feed_handler.hpp  trade_row.hpp
cpp/src/: quote_feed_handler.cpp  quote_fh_main.cpp  trade_feed_handler.cpp  trade_fh_fut_main.cpp  trade_fh_main.cpp
dashboards/: Analytics.json  DataFlowMonitoring.json  FeedhandlerMonitoring.json  TradesQuotes.json
kdb/: ctl.q  logmgr.q  mle.q  rdb.q  rte.q  schemas.q  tel.q  tp.q  wdb.q
kdb/analytics/: mle.q  pnl.q  rte.q  sig.q  tel.q
kdb/framework/: backtest.q  execution.q  framework.q  position.q  pretrade.q  replay.q
kdb/ml/: afml.q  features.q  labels.q  mlresearch.q
kdb/pubsub/: init.q  pubsub.q
kdb/strategies/: momentum.q
kdb/tick/: chained_tp.q  rdb.q  tp.q  wdb.q
kdb/utils/: aggTradeLoaderFut.q  binanceLoader.q  fundingLoader.q  hdbUtils.q  logmgr.q  tradeLoader.q  tradeLoaderFut.q
markdown_docs/: IntradayWriteDown.md  IntroductionToCompression.md  MeasuringCompressionPerformance.md  dollar_imbalance_bars_guide.md
mcp/: README.md  requirements.txt  server.py
mcp/claude-desktop-extension/: manifest.json
notebooks/: Statistics.ipynb
tests/: run_tests.sh  t_lib.q  test_afml.q  test_aggtrade_parse.cpp  test_json_reader.cpp  test_labels.q  test_order_book.cpp  test_schemas.q  test_smoke.sh  test_snapshot_worker.cpp  test_stream_path.cpp  test_trade_fh_row_construction.cpp  test_wdb_eod.sh  wdb_eod_body.q
